welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var decalage:Int
      ^Array2:10: error: local variables must be initialized
  var decalage:Int
      ^Array2:11: error: type mismatch;
 found   : String
 required: Int
  decalage=litMessage()
                     ^Array2:12: error: not found: value T
  setCouleurBrosse(T(decalage))
                   ^Array2:15: error: not found: value T
    setCouleurBrosse(T((i+decalage)% T.length))
                     ^Array2:15: error: not found: value T
    setCouleurBrosse(T((i+decalage)% T.length))
                                     ^